<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signInRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/vertical_guideline_end_space" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/vertical_guideline_begin_space" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/horizontal_guideline_begin_space" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/horizontal_guideline_end_space" />

    <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_end"
            app:layout_constraintStart_toStartOf="@+id/vertical_guideline_begin"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/signIn"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_end"
            app:layout_constraintStart_toStartOf="@+id/vertical_guideline_begin"/>

    <Button
            android:id="@+id/signIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/sign_in_button_text"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_end"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_end"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/vertical_guideline_begin"
            app:layout_constraintStart_toStartOf="@+id/vertical_guideline_begin"
            app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_begin"
            app:layout_constraintVertical_bias="0.55"/>
</androidx.constraintlayout.widget.ConstraintLayout>